objects/SLCA2__CA_HoverFields__c.object
<CustomObject>
    <description>list of fields for event hover</description>
    <fields>
        <fullName>SLCA2__calendarId__c</fullName>
        <label>CA_Calendar</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_HoverFieldsPlural</relationshipLabel>
        <relationshipName>CA_HoverFieldsPlural</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldLabel__c</fullName>
        <label>fieldLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldObject__c</fullName>
        <description>Related object</description>
        <label>fieldObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldOption__c</fullName>
        <description>JSON options</description>
        <label>fieldOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldType__c</fullName>
        <label>fieldType</label>
        <picklist>
            <picklistValues>
                <fullName>hover</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>relatedList</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLCA2__order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CA_HoverFields</label>
    <nameField>
        <label>CA_HoverFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_HoverFieldsPlural</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>